--- a/Tutoriales/Debian/Instalar los repositorios de MX Linux en Debian/DSC Agregar repositorios MX Linux a Debian-fix.html
+++ b/Tutoriales/Debian/Instalar los repositorios de MX Linux en Debian/DSC Agregar repositorios MX Linux a Debian-fix.html
@@ -10,11 +10,11 @@ programas se pueden instalar desde MX Instalador de paquetes?</h2>
 software o necesidad específica:</p>
 <h3 id="programas-disponibles-en-el-instalador-de-mx-linux">🖥️ Programas
 disponibles en el instalador de MX Linux</h3>
-<pre class="table-code-box" style="background-color: #f9f9f9; padding: 10px; border: 1px solid #ddd; overflow-x: auto;"><table style="border-collapse: collapse; width: 100%; font-size: 85%;">
+<pre class="table-code-box" style="background-color: #f9f9f9; padding: 10px; border: 1px solid #ddd; overflow-x: auto;"><table style="border-collapse: collapse; width: 100%; font-size: 80%;">
 <colgroup>
-<col style="width: 20%"/>
-<col style="width: 21%"/>
-<col style="width: 57%"/>
+<col style="width: 17%"/>
+<col style="width: 19%"/>
+<col style="width: 63%"/>
 </colgroup>
 <thead>
 <tr class="header" style="background-color: black; color: white; font-weight: bold; padding: 8px; ">
@@ -376,7 +376,8 @@ escaneados</td>
 <tr class="odd" style="background-color: #ffffffff;">
 <td style="border: 1px solid black; padding: 8px; text-align: left;"></td>
 <td style="border: 1px solid black; padding: 8px; text-align: left;">LibreOffice (backports)</td>
-<td style="border: 1px solid black; padding: 8px; text-align: left;">Versión actualizada desde backports</td>
+<td style="border: 1px solid black; padding: 8px; text-align: left;">Versión actualizada desde backports, pero a veces algún paquete da
+conflicto y no se puede instalar</td>
 </tr>
 <tr class="even" style="background-color: #e6e6e6;">
 <td style="border: 1px solid black; padding: 8px; text-align: left;"></td>
@@ -785,6 +786,9 @@ TuxType, Marble</td>
 </tr>
 </tbody>
 </table></pre>
+<p>La siguiete es una captura de pantalla que la tomé en Debian 12
+Netinstall CD LXQT de 64 bit (en 64 bit hay más programas):</p>
+<p><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEglynQnmeJCacrJnc0xF7l5Wi-vTWOgsU77-eS7crwrCRltfLqjHrYN9WBeGKcEuohtkQsAMBw22qG9cn-WuvYkEm93tqNJahKsbzWe3aNMUnrDPGVXR0mpZHdYxidXKWWyPWoRZhq9GrDhrHKFxzGzwWlc3UKPqaHhuPDPUtmdBbyhUQjCBSv0KTV72wY/s16000/01%20Instalador%20de%20paquetes%20de%20MX%20Linux.png"/></p>
 <p>y además poder instalar las últimas versiones de algunos programas,
 desde la pestaña de los repositorios de prueba o los backpots de
 Debian</p>
