--- a/Tutoriales/Debian/Instalar los repositorios de MX Linux en Debian/DSC Agregar repositorios MX Linux a Debian.html
+++ b/Tutoriales/Debian/Instalar los repositorios de MX Linux en Debian/DSC Agregar repositorios MX Linux a Debian.html
@@ -15,9 +15,9 @@ software o necesidad específica:</p>
 disponibles en el instalador de MX Linux</h3>
 <table>
 <colgroup>
-<col style="width: 20%" />
-<col style="width: 21%" />
-<col style="width: 57%" />
+<col style="width: 17%" />
+<col style="width: 19%" />
+<col style="width: 63%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -379,7 +379,8 @@ escaneados</td>
 <tr class="odd">
 <td></td>
 <td>LibreOffice (backports)</td>
-<td>Versión actualizada desde backports</td>
+<td>Versión actualizada desde backports, pero a veces algún paquete da
+conflicto y no se puede instalar</td>
 </tr>
 <tr class="even">
 <td></td>
@@ -788,6 +789,10 @@ TuxType, Marble</td>
 </tr>
 </tbody>
 </table>
+<p>La siguiete es una captura de pantalla que la tomé en Debian 12
+Netinstall CD LXQT de 64 bit (en 64 bit hay más programas):</p>
+<p><img
+src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEglynQnmeJCacrJnc0xF7l5Wi-vTWOgsU77-eS7crwrCRltfLqjHrYN9WBeGKcEuohtkQsAMBw22qG9cn-WuvYkEm93tqNJahKsbzWe3aNMUnrDPGVXR0mpZHdYxidXKWWyPWoRZhq9GrDhrHKFxzGzwWlc3UKPqaHhuPDPUtmdBbyhUQjCBSv0KTV72wY/s16000/01%20Instalador%20de%20paquetes%20de%20MX%20Linux.png" /></p>
 <p>y además poder instalar las últimas versiones de algunos programas,
 desde la pestaña de los repositorios de prueba o los backpots de
 Debian</p>
